--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/photo5075974259913893918"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_rayito"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".Activities.AsistenciaActivity"
-            android:label="@string/title_activity_asistencia"
-            android:parentActivityName=".Activities.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mialdebu.Activities.HomeActivity" />
-        </activity>
-        <activity android:name=".Activities.ComunicadosActivity" />
+        android:theme="@style/AppTheme"
+      >
+        <activity android:name=".Activities.AsistenciaActivity"></activity>
+        <activity android:name=".Activities.ComunicadosActivity"
+            android:parentActivityName=".Activities.HomeActivity" />
         <activity android:name=".Activities.Alumno_Activity" />
         <activity
             android:name=".Activities.InscripcionActivity"
@@ -30,6 +24,7 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+
             android:name=".Activities.LoginActivity"
             android:launchMode="singleTop">
             <intent-filter>
@@ -38,7 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.HomeActivity" />
+        <activity android:name=".Activities.HomeActivity"
+            android:parentActivityName=".Activities.LoginActivity" />
         <activity
             android:name=".Activities.RegisterActivity"
             android:launchMode="singleTop"
